--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,13 @@ ModelManifest.xml
 /Ares17_Group3/Models/low-poly-trees/textures
 /Ares17_Group3/Models/low-poly-trees/source
 /Ares17_Group3/Models/House
+/Ares17_Group3/Models
+/Ares17_Group3/Textures
+/Ares17_Group3/bone.h
+/Ares17_Group3/simpleLoader.h
+/Ares17_Group3/Roboto-Black.ttf
+/Ares17_Group3/Nippon_Tech.TTF
+/Ares17_Group3/CollisionTexture.bmp
+/Ares17_Group3/modelLoading - Copy.vert
+/Ares17_Group3/modelLoading - Copy.frag
+/Ares17_Group3/~AutoRecover.Ares17_Group3.vcxproj
