--- a/Ares17_Group3/Ares17_Group3.vcxproj.filters
+++ b/Ares17_Group3/Ares17_Group3.vcxproj.filters
@@ -179,6 +179,9 @@
     <ClInclude Include="GlobalData.h">
       <Filter>Being worked on</Filter>
     </ClInclude>
+    <ClInclude Include="Weapon.h">
+      <Filter>Being worked on</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\cubeMap.frag">
