--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,6 @@ ModelManifest.xml
 /Ares17_Group3/modelLoading - Copy.vert
 /Ares17_Group3/modelLoading - Copy.frag
 /Ares17_Group3/~AutoRecover.Ares17_Group3.vcxproj
+/Ares17_Group3/Sky_2
+/Ares17_Group3/Violent
+/Ares17_Group3/Fonts
